--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlin_version = '1.0.0-rc-1036'
+        kotlin_version = '1.0.0'
         anko_version = '0.8.2'
     }
     repositories {
